<resources>
    <string name="app_name">Mini-projet3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtConnexion">Connexion</string>
    <string name="txtIdentifiant">Identifiant:</string>
    <string name="txtMotDePasse">Password:</string>
    <string name="btnConnexion">Connexion</string>
    <string name="strWelcome">Welcome</string>
    <string name="txtDeconnexion">Deconnexion</string>
    <string name="txtListe">Lister Succursale</string>
    <string name="suppression">Supprimer</string>
    <string name="txtModifier">Modifier</string>
    <string name="txt_add">Ajouter succursale</string>
    <string name="txt_ville">Ville:</string>
    <string name="txt_budget">Budget:</string>
    <string name="txt_liste">Liste des succursales</string>
    <string name="context_budget">Budget</string>
    <string name="txt_afficher_budget">Afficher budget</string>
    <string name="txt_retour">Retour</string>
    <string name="txt_update">Modifier succursale</string>
    <string name="txt_liste_favoris">Liste des favoris</string>
</resources>