<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="306dp"
        android:layout_height="117dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="88dp"
        android:src="@drawable/ic_succ_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginBottom="190dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/txt_add"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="100dp"
        android:text="@string/txt_ville"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="150dp"
        android:text="@string/txt_budget"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etVille"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/etBudget"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="55dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/btnAjouterSucc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="Ajouter" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="520dp"
        android:text="@string/txt_retour" />

</FrameLayout>
